fixed small bugs
